--- a/frontend/public/styles.css
+++ b/frontend/public/styles.css
@@ -115,37 +115,31 @@ button:active {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   gap: 10px;
-  align-items: stretch;
-  justify-items: stretch;
-  box-sizing: border-box;
 }
 
 .tile {
   aspect-ratio: 1/1;
   display: flex;
-  padding: 5%;
   background-color: #0098ED;
   border: solid;
   border-color: #62B3EE;
   border-width: 0.25rem;
   border-radius: 5%;
   color: #fff;
-  justify-content: center;
-  align-items: center;
   cursor: pointer;
+  align-items: stretch;
+  padding: 10px;
 }
 
 .inner-circle img {
-  object-fit: contain;
   object-position: center;
-  width: 100%;
-  height: 100%;
 }
 
 .inner-circle {
   background: #115587;
   border-radius: 50%;
-  width: 95%;
-  height: 95%;
+  aspect-ratio: 1/1;
+  width: 100%;
+  align-content: center;
 }
 
